# yoyo-database-migrations

./: .gitignore  .travis.yml  404.html  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  index.html  mkdocs.yml  setup.cfg  setup.py  sitemap.xml  test_databases.ini  tox.ini
.tox/py27/: .tox-config1
.tox/py27/lib/python2.7/: distutils
.tox/py36/: .tox-config1
.tox/py36-flake8/: .tox-config1
command_line_usage/: index.html
configuration_file/: index.html
connections/: index.html
disabling_transactions/: index.html
doc/: Makefile  conf.py  index.rst
docs/: command_line_usage.md  configuration_file.md  connections.md  disabling_transactions.md  index.md  migration_files.md  password_security.md  post_apply_hook.md  transactions.md  using_yoyo_from_python_code.md
migration_files/: index.html
password_security/: index.html
post_apply_hook/: index.html
scripts/: clean.sh  publish.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_backends.py  test_cli_script.py  test_internalmigrations.py  test_migrations.py
transactions/: index.html
using_yoyo_from_python_code/: index.html
yoyo/: __init__.py  backends.py  compat.py  config.py  connections.py  migrations.py  utils.py
yoyo/scripts/: migrate.py  newmigration.py
yoyo/tests/: conftest.py  test_backends.py  test_cli_script.py  test_connections.py  test_internalmigrations.py  test_migrations.py  test_utils.py
yoyo_migrations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
