[metadata]
name = yoyo-database-migrations
description = Database migrations with SQL
long_description = file: README.md
long_description_content_type = text/markdown
author = Oliver Cope
author_email = oliver@redgecko.org
url = https://github.com/marcosschroh/yoyo-database-migrations
keywords = migrations migrate database alembic south schamemigrations datamigrations
license = Apache
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Version Control
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
packages = 
    yoyo
    yoyo.scripts
    yoyo.internalmigrations
install_requires = 
    text-unidecode
    iniherit
    tabulate==0.8.2

[options.extras_require]
mysql = PyMySQL
postgres = psycopg2
pyodbc = pyodbc

[options.entry_points]
console_scripts = 
    yoyo = yoyo.scripts.main:main
    yoyo-migrate = yoyo.scripts.main:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501,W503,E203
exclude = yoyo/__init__.py
